log
Sun May 15 16:12:51 UTC 2022: 
 sudoku.c | 44 ++++++++++++++++++++++++++++++++------------
 1 file changed, 32 insertions(+), 12 deletions(-)
 tests:  1|4
total_score: 10/70
afdb066
Sun May 15 16:23:54 UTC 2022: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:55:9: error: unused variable ‘j’ [-Werror=unused-variable]
   int i,j,b,v,p;
         ^
sudoku.c:55:7: error: unused variable ‘i’ [-Werror=unused-variable]
   int i,j,b,v,p;
       ^
cc1: all warnings being treated as errors
Compilation failed
2ecd440
Sun May 15 16:24:10 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
3bf82da
Sun May 15 16:36:20 UTC 2022: 
 sudoku.c | 17 ++++++++++++++---
 1 file changed, 14 insertions(+), 3 deletions(-)
 tests:  1|4
total_score: 10/70
13e825e
Sun May 15 17:49:49 UTC 2022: 
 sudoku.c | 54 +++++++++++++++++++++++++++++++++++++-----------------
 1 file changed, 37 insertions(+), 17 deletions(-)
 tests:  4|3
total_score: 30/70
2c7341a
Sun May 15 18:16:57 UTC 2022: 
 sudoku.c | 55 ++++++++++++++++++++++++++++++++++++-------------------
 1 file changed, 36 insertions(+), 19 deletions(-)
 tests:  6|2
total_score: 45/70
342fe1b
